--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ sass:
   style:            compressed
 
 # Comments
-disqus_shortname:   taylantatli
+disqus_shortname:   jeromelithiaote
 
 # Social
 # if you don't have any of social below, comment the line.
