added contact email

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              J3ZZ
-bio:                'Experimental sound crea­tions and per­for­mances.'
+bio:                "Experimental sound crea­tions and per­for­mances. contact@jeromelithiaote.com"
 description:        "Experimental sound crea­tions and per­for­mances."
 reading_time:       true
 words_per_minute:   200
