--- a/_config.yml
+++ b/_config.yml
@@ -112,4 +112,4 @@ jekyll-mentions:
     base_url: https://twitter.com
 
 # Exclude list
-exclude: [README.md, Gemfile, Gemfile.lock, node_modules, gulpfile.js, package.json, _site, src, vendor, CNAME, LICENSE, Rakefile, placeholder-big.psd, placeholder-big.org.jpg, logo.org.png]
+exclude: [README.md, Gemfile, Gemfile.lock, node_modules, gulpfile.js, package.json, _site, src, vendor, LICENSE, Rakefile, placeholder-big.psd, placeholder-big.org.jpg, logo.org.png]
