updating gitignore file

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ destination: docs
 # Site settings
 title: J3ZZ
 email: contact@j3zz.com
-url: https://www.j3zz.com
+url: https://jeromelithiaote.github.io/j3zz/
 description: "Ambient blend of bio sounds, electronics & strings <br /> Human x Nature x Technology"
 
 # Color settings (hex-codes without the leading hash-tag)
