fixing nav homepage url

--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,15 @@ webmaster_verifications:
   # yandex: 1234
   # baidu: 1234
 lang: en_US
+# The SEO tag will respect the following YAML front matter if included in a post, page, or document:
+#
+#     title - The title of the post, page, or document
+#     description - A short description of the page's content
+#     image - URL to an image associated with the post, page, or document (e.g., /assets/page-pic.jpg)
+#     author - Page-, post-, or document-specific author information (see Advanced usage)
+#     lang - Page-, post-, or document-specific language information
+
+
 
 
 # Color settings (hex-codes without the leading hash-tag)
