adding SEO meta tags keywords and updating title

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,8 @@ plugins:
 
 # Site settings incl. SEO
 # https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
-title: J3ZZ
+title: J3ZZ audiovisual creations & performances
+keywords: "video, music, j3zzlab, events, music, livestream, audiovisual, contemporary, live stream, concert, installation, show, concert, artist"
 email: contact@j3zz.com
 url: https://www.j3zz.com
 tagline: "All you need to know about J3ZZ - music composer, producer & sound artist"
