update nav bar and order of the content on single main page

--- a/_config.yml
+++ b/_config.yml
@@ -74,6 +74,8 @@ social:
     url: https://twitch.tv/iamj3zz
   - title: "on discord:  iamj3zz#1937"
     url: https://discord.com/channels/@me
+  - title: Newsletter
+    url: https://mailchi.mp/487c90476402/vim4j3n2m1
 
 
 # Music networks urls (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
