correcting typo url deezer

--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ music-releases:
   - title: apple
     url: https://music.apple.com/us/artist/j3zz/1506525107
   - title: deezer
-    url: hhttps://www.deezer.com/us/artist/7685176
+    url: https://www.deezer.com/us/artist/7685176
   - title: google
     url: https://play.google.com/store/music/artist?id=Actvivms23ztfdml7a4sqraijg4
   - title: amazon
