--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ destination: docs
 #-------------------------------
 # About Section
 author-name:   J3ZZ
-author-avatar: 09.jpg
+author-avatar: avatar.jpg
 
 
 #-------------------------------
